[package]
name = "limp"
version = "0.1.0"
authors = ["Eric Schneider"]
repository = "https://github.com/eric-unc/limp"
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1.3"
pest_derive = "2.1.0"
